--- a/k8s/templates/external/flink/taskmanager-deployment.yaml
+++ b/k8s/templates/external/flink/taskmanager-deployment.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - name: taskmanager
-          image: "flink:{{ .Values.external.flinkVersion }}"
+          image: fogsyio/flink:{{ .Values.external.flinkVersion }}
           imagePullPolicy: {{ .Values.pullPolicy }}
           args: ["taskmanager"]
           ports:
