--- a/compose/docker-compose.full.yml
+++ b/compose/docker-compose.full.yml
@@ -151,7 +151,7 @@ services:
       spnet:
 
   jobmanager:
-    image: flink:1.9.1-scala_2.11
+    image: fogsyio/flink:1.9.1-scala_2.11
     command: jobmanager
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
@@ -160,7 +160,7 @@ services:
       spnet:
 
   taskmanager:
-    image: flink:1.9.1-scala_2.11
+    image: fogsyio/flink:1.9.1-scala_2.11
     depends_on:
       - jobmanager
     command: taskmanager
