--- a/k8s/templates/extensions/connect-adapters/connect-worker-deployment.yaml
+++ b/k8s/templates/extensions/connect-adapters/connect-worker-deployment.yaml
@@ -37,6 +37,9 @@ spec:
         - name: init-wait-connect-worker
           image: alpine
           command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 connect-master 8099 && exit 0 || sleep 3; done; exit 1"]
+        - name: init-wait-kafka
+          image: alpine
+          command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 kafka 9092 && exit 0 || sleep 3; done; exit 1"]            
       containers:
         - name: connect-worker
           image: {{ .Values.streampipes.registry }}/connect-worker:{{ .Values.streampipes.version }}
