--- a/k8s/templates/extensions/pipeline-elements/sources-vehicle-simulator-deployment.yaml
+++ b/k8s/templates/extensions/pipeline-elements/sources-vehicle-simulator-deployment.yaml
@@ -32,6 +32,9 @@ spec:
         - name: init-wait-consul
           image: alpine
           command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 consul 8600 && exit 0 || sleep 3; done; exit 1"]
+        - name: init-wait-kafka
+          image: alpine
+          command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 kafka 9092 && exit 0 || sleep 3; done; exit 1"]            
       containers:
         - name: sources-vehicle-simulator
           image: {{ .Values.streampipes.registry }}/sources-vehicle-simulator:{{ .Values.streampipes.version }}
