[hotfix] add port 6124 blob.server.port config to jobmanager service

--- a/k8s/templates/external/flink/jobmanager-deployment.yaml
+++ b/k8s/templates/external/flink/jobmanager-deployment.yaml
@@ -35,7 +35,11 @@ spec:
           args: ["jobmanager"]
           ports:
             - containerPort: 8081
+              name: webui
             - containerPort: 6123
+              name: rpc
+            - containerPort: 6124
+              name: blob-server
           env:
             - name: JOB_MANAGER_RPC_ADDRESS
               value: jobmanager
