--- a/k8s/templates/extensions/pipeline-elements/files-pvc.yaml
+++ b/k8s/templates/extensions/pipeline-elements/files-pvc.yaml
@@ -20,7 +20,7 @@ metadata:
   name: files-pvc
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 256Mi
