[STREAMPIPES-240] add missing alpine pkgs to fix NullPointerException

--- a/streampipes-processors-image-processing-jvm/Dockerfile
+++ b/streampipes-processors-image-processing-jvm/Dockerfile
@@ -19,7 +19,10 @@ FROM $BASE_IMAGE
 ENV CONSUL_LOCATION consul
 
 EXPOSE 8090
+# needed pkgs processors-image-processing-jvm
+RUN apk --update add --no-cache \
+    fontconfig \
+    ttf-dejavu
 
 COPY target/streampipes-processors-image-processing-jvm.jar  /streampipes-processing-element-container.jar
-
 ENTRYPOINT ["java", "-jar", "/streampipes-processing-element-container.jar"]
