--- a/streampipes-commons/pom.xml
+++ b/streampipes-commons/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.apache.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.67.0-SNAPSHOT</version>
+        <version>0.67.0</version>
     </parent>
 
     <artifactId>streampipes-commons</artifactId>
