--- a/streampipes-model-client/pom.xml
+++ b/streampipes-model-client/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.apache.streampipes</groupId>
 		<artifactId>streampipes-parent</artifactId>
-		<version>0.67.0-SNAPSHOT</version>
+		<version>0.67.0</version>
 	</parent>
 
 	<artifactId>streampipes-model-client</artifactId>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-model-shared</artifactId>
-			<version>0.67.0-SNAPSHOT</version>
+			<version>0.67.0</version>
 		</dependency>
 
 		<!-- External dependencies -->
