--- a/archetypes/streampipes-archetype-pe-processors-jvm/pom.xml
+++ b/archetypes/streampipes-archetype-pe-processors-jvm/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.67.0</version>
+        <version>0.67.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>streampipes-archetype-pe-processors-jvm</artifactId>
