--- a/streampipes-container/pom.xml
+++ b/streampipes-container/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.apache.streampipes</groupId>
 		<artifactId>streampipes-parent</artifactId>
-		<version>0.67.0</version>
+		<version>0.67.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>streampipes-container</artifactId>
@@ -33,22 +33,22 @@
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-dataformat</artifactId>
-			<version>0.67.0</version>
+			<version>0.67.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-messaging</artifactId>
-			<version>0.67.0</version>
+			<version>0.67.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-sdk</artifactId>
-			<version>0.67.0</version>
+			<version>0.67.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.streampipes</groupId>
 			<artifactId>streampipes-serializers</artifactId>
-			<version>0.67.0</version>
+			<version>0.67.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- External dependencies -->
