Change installer version to 0.67.0

--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -18,7 +18,7 @@ deployment: lite
 pullPolicy: "Always"
 
 streampipes:
-  version: "0.67.0-SNAPSHOT"
+  version: "0.67.0"
   registry: "apachestreampipes"
 
 external:
