Barebone impl of Label-API

--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -60,5 +60,6 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/adapter/all/*/* = anon
 /api/v2/adapter/all/*/streams/* = anon
 /api/v2/adapter/all = anon
+/api/v2/users/*/labels = anon
 /api/** = customFilter
 /** = customFilter
