Cusum change detector with welford algorithm to estimate std online

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <module>streampipes-pipeline-elements-data-simulator</module>
         <module>streampipes-connect-adapters</module>
         <module>streampipes-pipeline-elements-all-flink</module>
+        <module>streampipes-processors-change-detection-jvm</module>
     </modules>
 
     <properties>
