[maven-release-plugin] rollback the release of streampipes-parent-0.67.1

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>org.apache.streampipes</groupId>
     <artifactId>streampipes-parent</artifactId>
-    <version>0.68.0-SNAPSHOT</version>
+    <version>0.67.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -837,6 +837,7 @@
         <module>archetypes/streampipes-archetype-pe-processors-jvm</module>
         <module>archetypes/streampipes-archetype-pe-sinks-flink</module>
         <module>archetypes/streampipes-archetype-pe-processors-flink</module>
+        <module>streampipes-app-file-export</module>
         <module>streampipes-backend</module>
         <module>streampipes-code-generation</module>
         <module>streampipes-commons</module>
@@ -1242,7 +1243,7 @@
         <developerConnection>scm:git:ssh://git@github.com/apache/incubator-streampipes.git</developerConnection>
         <connection>scm:git:ssh://git@github.com/apache/incubator-streampipes.git</connection>
         <url>https://github.com/apache/incubator-streampipes</url>
-      <tag>HEAD</tag>
+      <tag>rel/VERSION</tag>
   </scm>
 
     <issueManagement>
