Labeling api WIP

--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -60,6 +60,12 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/adapter/all/*/* = anon
 /api/v2/adapter/all/*/streams/* = anon
 /api/v2/adapter/all = anon
-/api/v2/users/*/labels = anon
+/api/v2/users/*/labeling/label/category/* = anon
+/api/v2/users/*/labeling/label/delete/* = anon
+/api/v2/users/*/labeling/category/delete/* = anon
+/api/v2/users/*/labeling/label/* = anon
+/api/v2/users/*/labeling/category/* = anon
+/api/v2/users/*/labeling/* = anon
+/api/v2/users/*/labeling = anon
 /api/** = customFilter
 /** = customFilter
