[STREAMPIPES-250] Refactor Siddhi Wrapper

--- a/streampipes-wrapper-siddhi/pom.xml
+++ b/streampipes-wrapper-siddhi/pom.xml
@@ -52,6 +52,12 @@
             <groupId>io.siddhi</groupId>
             <artifactId>siddhi-query-compiler</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.siddhi.extension.execution.list</groupId>
+            <artifactId>siddhi-execution-list</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
