--- a/ui/package.json
+++ b/ui/package.json
@@ -50,8 +50,8 @@
     "codemirror": "5.55.0",
     "core-js": "2.5.3",
     "dagre": "0.8.4",
-    "datatables.net-dt": "1.10.21",
     "datatables.net": "1.10.20",
+    "datatables.net-dt": "1.10.21",
     "fast-json-patch": "2.1.0",
     "file-saver": "1.3.8",
     "jquery": "2.1.3",
@@ -67,12 +67,12 @@
     "ng-file-upload": "9.0.13",
     "ng-pick-datetime": "7.0.0",
     "ng-prettyjson": "0.1.8",
-    "ngx-showdown": "5.1.0",
     "ng-simple-slideshow": "1.2.9",
     "ng2-dragula": "1.5.0",
     "ngx-auto-scroll": "^1.1.0",
     "ngx-color-picker": "9.0.0",
     "ngx-quill": "12.0.1",
+    "ngx-showdown": "5.1.0",
     "plotly.js": "1.52.2",
     "prismjs": "1.16.0",
     "quill": "1.3.7",
@@ -81,31 +81,31 @@
     "shepherd.js": "2.4.0",
     "showdown": "1.9.1",
     "systemjs": "0.21.6",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "10.0.6",
     "@angular/compiler-cli": "10.0.9",
-    "@ngtools/webpack": "^10.0.7",
-    "@types/angular": "^1.6.43",
-    "@types/jasmine": "~2.8.3",
-    "@types/jqueryui": "^1.12.7",
-    "@types/leaflet": "^1.5.9",
-    "@types/node": "^12.11.1",
-    "@types/rx": "^4.1.1",
+    "@ngtools/webpack": "^10.2.0",
+    "@types/angular": "^1.7.4",
+    "@types/jasmine": "^2.8.17",
+    "@types/jqueryui": "^1.12.13",
+    "@types/leaflet": "^1.5.19",
+    "@types/node": "^12.19.3",
+    "@types/rx": "^4.1.2",
     "@types/showdown": "1.9.3",
-    "codelyzer": "^6.0.0",
-    "copy-webpack-plugin": "^5.0.2",
+    "codelyzer": "^6.0.1",
     "compression-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "~3.5.0",
-    "js-yaml": "^3.10.0",
+    "js-yaml": "^3.14.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -115,7 +115,7 @@
     "karma-verbose-reporter": "0.0.6",
     "mini-css-extract-plugin": "^0.9.0",
     "mustache": "^2.3.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "prettier": "1.14.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
@@ -126,9 +126,9 @@
     "typescript": "3.9.7",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.44.1",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
-    "webpack-merge": "^4.2.1",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-merge": "^4.2.1"
   }
 }
