--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
         <type-parser.version>0.6.0</type-parser.version>
         <underscore.version>1.47</underscore.version>
         <wildfly-common.version>1.5.2.Final</wildfly-common.version>
+        <hawtbuf.version>1.11</hawtbuf.version>
 
         <!-- Test dependencies -->
         <junit.version>4.12</junit.version>
@@ -557,6 +558,11 @@
                 <groupId>org.fusesource.mqtt-client</groupId>
                 <artifactId>mqtt-client</artifactId>
                 <version>${mqtt-client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.fusesource.hawtbuf</groupId>
+                <artifactId>hawtbuf</artifactId>
+                <version>${hawtbuf.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.logging</groupId>
