--- a/streampipes-pipeline-elements-all-jvm/pom.xml
+++ b/streampipes-pipeline-elements-all-jvm/pom.xml
@@ -94,6 +94,12 @@
             <version>${streampipes.version}</version>
             <classifier>embed</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-processors-change-detection-jvm</artifactId>
+            <version>${streampipes.version}</version>
+            <classifier>embed</classifier>
+        </dependency>
 
         <!-- 3rd party dependencies to avoid convergence errors -->
         <dependency>
@@ -103,6 +109,12 @@
         <dependency>
             <groupId>org.atteo.classindex</groupId>
             <artifactId>classindex</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-processors-change-detection-jvm</artifactId>
+            <version>0.68.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
