--- a/streampipes-processors-enricher-jvm/pom.xml
+++ b/streampipes-processors-enricher-jvm/pom.xml
@@ -67,6 +67,10 @@
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-messaging-kafka</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-messaging-mqtt</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
