[STREAMPIPES-252] add SP_PRIORITIZED_PROTOCOL to CLI

--- a/cli/.env
+++ b/cli/.env
@@ -18,3 +18,20 @@ SP_VERSION=0.68.0-SNAPSHOT
 SP_SUBNET=172.31.0.0/16
 SP_CONSUL_CONTAINER_IP=172.31.0.9
 COMPOSE_PROJECT_NAME=streampipes
+
+# -------------------------------------------------------------
+# 
+# OPTIONAL environment variables to configure system on startup
+#
+# -------------------------------------------------------------
+
+# Configuration to set prioritized protocol in backend service
+# 
+# options: kafka, mqtt, jms
+# default: kafka
+#SP_PRIORITIZED_PROTOCOL=mqtt
+
+# Configuration to set MQTT host in backend service
+# 
+# default: activemq
+#SP_MQTT_HOST=mosquitto
