--- a/streampipes-connect-adapters/pom.xml
+++ b/streampipes-connect-adapters/pom.xml
@@ -157,6 +157,10 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.plc4x</groupId>
+                <artifactId>plc4j-connection-pool</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.plc4x</groupId>
                 <artifactId>plc4j-driver-s7</artifactId>
                 <scope>runtime</scope>
             </dependency>
