--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -67,5 +67,6 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/users/*/labeling/category/* = anon
 /api/v2/users/*/labeling/* = anon
 /api/v2/users/*/labeling = anon
+/api/v2/connect/*/master/administration = anon
 /api/** = customFilter
 /** = customFilter
