Fix v1-api route

--- a/streampipes-backend/src/main/resources/shiro.ini
+++ b/streampipes-backend/src/main/resources/shiro.ini
@@ -71,5 +71,6 @@ securityManager.rememberMeManager.cookie.maxAge = 1000000000
 /api/v2/connect/*/master/sources/* = anon
 /api/v2/connect/*/master/sources/*/streams = anon
 /api/v2/connect/*/master/sources/*/streams/* = anon
+/api/v2/connect/*/master/resolvable/*/configurations = anon
 /api/** = customFilter
 /** = customFilter
