--- a/ui/angular.json
+++ b/ui/angular.json
@@ -82,8 +82,7 @@
           "options": {
             "browserTarget": "app:build:development"
           },
-          "configurations": {
-          }
+          "configurations": {}
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -101,8 +100,7 @@
             "assets": [
               "src/assets"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           }
         },
         "lint": {
@@ -120,5 +118,8 @@
       "projectType": "application"
     }
   },
-  "defaultProject": "app"
+  "defaultProject": "app",
+  "cli": {
+    "analytics": "881975f2-3517-40bd-a33f-9bcd72213c08"
+  }
 }
