--- a/ui/package.json
+++ b/ui/package.json
@@ -40,12 +40,12 @@
     "angular-datatables": "9.0.2",
     "angular-gridster2": "8.3.0",
     "angular-loading-bar": "0.8.0",
-    "angular-material-icons": "0.4.0",
+    "angular-material-icons": "^0.7.1",
     "angular-plotly.js": "1.5.0",
     "angular-tree-component": "8.5.6",
     "angular-ui-tree": "2.9.0",
     "angular2-uuid": "1.1.1",
-    "bootstrap": "3.3.4",
+    "bootstrap": "^4.5.3",
     "calendar-heatmap-graph": "0.0.14",
     "codemirror": "5.55.0",
     "core-js": "2.5.3",
@@ -54,7 +54,7 @@
     "datatables.net-dt": "1.10.21",
     "fast-json-patch": "2.1.0",
     "file-saver": "1.3.8",
-    "jquery": "2.1.3",
+    "jquery": "^3.5.1",
     "jquery-ui-dist": "1.12.1",
     "jquery.panzoom": "2.0.5",
     "jshint": "2.11.1",
@@ -73,7 +73,7 @@
     "ngx-color-picker": "9.0.0",
     "ngx-quill": "12.0.1",
     "ngx-showdown": "5.1.0",
-    "plotly.js": "1.52.2",
+    "plotly.js": "^1.57.1",
     "prismjs": "1.16.0",
     "quill": "1.3.7",
     "roboto-fontface": "0.10.0",
@@ -86,7 +86,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.0",
-    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "10.0.6",
     "@angular/compiler-cli": "10.0.9",
     "@ngtools/webpack": "^10.2.0",
@@ -98,9 +98,9 @@
     "@types/rx": "^4.1.2",
     "@types/showdown": "1.9.3",
     "codelyzer": "^6.0.1",
-    "compression-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^6.1.1",
     "copy-webpack-plugin": "^5.1.2",
-    "css-loader": "^0.28.11",
+    "css-loader": "^5.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^3.2.0",
